# cpp-project-structure

./: .gitignore  CMakeLists.txt  README.md
Model/: CMakeLists.txt
Model/include/: Example.h
Model/src/: Example.cpp
View/: CMakeLists.txt
program/: CMakeLists.txt
program/src/: main.cpp
